# treesize-cli

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: release.yml
src/cli/: CMakeLists.txt  cliArguments.hpp  display.cpp  display.hpp  main.cpp
src/core/: CMakeLists.txt  fileModel.cpp  fileModel.h  fileModel.hpp  treesize.cpp  treesize.h  treesize.hpp
